[gd_scene load_steps=9 format=2]

[ext_resource path="res://gui/game_hud/passenger_window/bar_bg.png" type="Texture" id=1]
[ext_resource path="res://gui/game_hud/passenger_window/insanity_fill.png" type="Texture" id=2]
[ext_resource path="res://gui/game_hud/passenger_window/passenger_window.gd" type="Script" id=3]
[ext_resource path="res://gui/theme/pixel_theme.tres" type="Theme" id=4]
[ext_resource path="res://gui/fonts/pixellari_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://passengers/ressources/bjorn/bjorn_happy.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/PassengerPic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CurrentEffect:bbcode_text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "" ]
}

[sub_resource type="Animation" id=2]
resource_name = "go_red"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/PassengerPic:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.8, 0.615686, 0.615686, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CurrentEffect:bbcode_text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "" ]
}

[node name="PassengerWindow" type="MarginContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_right = 48.0
margin_bottom = 111.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 96.0
margin_bottom = 121.0

[node name="CurrentEffect" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
scroll_active = false

[node name="PassengerPic" type="TextureRect" parent="VBoxContainer"]
show_behind_parent = true
margin_top = 29.0
margin_right = 96.0
margin_bottom = 93.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 6 )
stretch_mode = 6

[node name="InsanityBar" type="TextureProgress" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 96.0
margin_bottom = 121.0
rect_min_size = Vector2( 96, 24 )
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/go_red = SubResource( 2 )
